--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aladdin",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.2",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.32.0",
     "connect-mongo": "^4.6.0",
