--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,8 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20"
   }
