--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app",
-    "test": "cross-env NODE_ENV=test test"
+    "test": "cross-env NODE_ENV=test tests"
   },
   "author": "Aladdin",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "cloudinary": "^1.32.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
