--- a/admin/package.json
+++ b/admin/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/x-data-grid": "^6.0.1",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "recharts": "^2.4.3",
+    "sass": "^1.59.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.59.2",
     "vite": "^4.1.0"
-  },
-  "proxy": "http://localhost:800/api"
+  }
 }
