--- a/clients/package.json
+++ b/clients/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.1.0"
-  },
-  "proxy": "http://localhost:800/api"
+  }
 }
