--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,8 @@
     "mongo-connect": "^0.0.6",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
