--- a/api/package.json
+++ b/api/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "stripe": "^11.17.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
