--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
     "vite": "^4.1.0"
   }
 }
