--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/x-data-grid": "^6.0.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/x-data-grid": "^6.9.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "sass": "^1.59.2",
     "vite": "^4.1.0"
   }
