--- a/api/config/.env.example
+++ b/api/config/.env.example
@@ -1,4 +1,4 @@
 PORT = 8000
 DB_STRING = "mongodb://localhost:27017/travella"
 TEST_DB_STRING = "mongodb://localhost:27017/travella-test"
-JWT = "mhuomlwpwetuPajVXexZb2a8B8wkXkgkZxacNOFEiDg="
+JWT_SECRET = "mhuomlwpwetuPajVXexZb2a8B8wkXkgkZxacNOFEiDg="
